--- a/style.css
+++ b/style.css
@@ -31,6 +31,60 @@ line-height: 2.5rem;
     display: grid;
     place-items: center;
 }
+.btn-main{
+    border: 1px solid #000;
+    width: 20rem;
+    padding: 0 3rem;
+    display: grid;
+    place-items: center;
+    border-radius: 4rem;
+    height: 7rem;
+    font-size: 2.4rem;
+    color: #000;
+    position: relative;
+    transition: all cubic-bezier(0.430, 0.195, 0.020, 1.000) .3s;
+    overflow: hidden;
+}
+.btn-main::after{
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    content: '';
+    position: absolute;
+    width: 0;
+    left: 0;
+    top: 0;
+    transition: all .5s ease;
+}
+.btn-main:hover::after{
+    width: 100%;
+}
+.btn-main:hover{
+    color: #fff;
+}
+.btn-main div{
+    display: block;
+    padding: 2rem 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 3rem;
+    position: absolute;
+    text-align: center;
+    transition: top cubic-bezier(0.430, 0.195, 0.020, 1.000) .4s;
+    z-index: 2;
+}
+.btn-main div:last-child{
+    top: 100%;
+}
+.btn-main div:first-child{
+        top : 0;
+}
+.btn-main:hover div:first-child{
+        top : -100%;
+}
+.btn-main:hover div:last-child{
+        top : 0;
+}
 .btn{
     /* font-size: 5rem; */
     cursor: pointer;
@@ -91,6 +145,12 @@ nav h1{
     color: #fff;
     cursor: pointer;
 }
+.menu{
+    z-index: 100;
+}
+.menu h1{
+    z-index: 100;
+}
 .menu h1 span{
     background-color: #fff;
     height: 2px ;
@@ -115,4 +175,224 @@ nav h1{
 }
 .hero-cursor span{
     font-size: 2.1rem;
+}
+
+.navbar{
+    position: fixed;
+    top: -30%;
+    left: 0;
+    height: 0;
+    overflow: hidden;
+    background-color: #e9e8e8;
+    width: 100%;
+    z-index: 10;
+    display: grid;
+    place-items: center;
+    transition: all 1s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-top: 10rem;
+}
+#hero.active .navbar{
+    top: 0;
+    height: 70vh;
+}
+.navbar ul{
+    list-style: none;
+}
+.btn-nav{
+    font-size: 3vw;
+    height: 3.3vw;
+    overflow: hidden;
+}
+.btn-nav div{
+    width: 100%;
+    height: 100%;
+    transition: all .3s ease;
+    color: #000;
+    font-weight: 200;
+}
+.btn-nav:hover div:first-child{
+    opacity: 1;
+}
+.btn-nav:hover div:nth-child(2){
+    opacity: 0;
+}
+.btn-nav:hover div:first-child{
+    transform: translateY(-100%);
+    opacity: 0;
+}
+.btn-nav:hover div:nth-child(2){
+    transform: translateY(-100%);
+    opacity: 1;
+}
+
+.navbar .btn-main{
+    margin-top: 2rem;
+}
+.navbar-main
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+.close-btn{
+    top: 5rem;
+    right: 5rem;
+    position: absolute;
+    font-size: 3rem;
+    font-weight: 200;
+
+}
+.navbar-box{
+    width: 400px;
+}
+.navbar-box .navbar-video{
+    border-radius: 0.7rem;
+    overflow: hidden; 
+    transform: scale(0);
+    width: 400px;
+    height: 280px;
+}
+.navbar-box .navbar-video video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.navbar-box h1{
+    font-size: 3rem;
+    font-family: rejouice;
+    font-weight: 200;
+}
+.navbar-box-play{
+    width: 100%;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar-box-play-left{
+    display: flex;
+    align-items: center;
+}
+.navbar-box-play-left h1{
+    margin-left: 1rem;
+    font-family: nb;
+    font-size: 2rem;
+}
+.navbar-box-play-left h1 span{
+    height: 1.5px;
+}
+.navbar-box-play-right h1{
+    font-size: 2.3rem;
+    font-weight: 200;
+}
+.navbar-box-play-left i{
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: #000;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: grid;
+    place-items: center;
+}
+.navbar-footer{
+    width: 90%;
+    margin-top: 5rem;
+    padding: 1.5rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+.navbar-hr{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.navbar-footer h1{
+    font-size: 2rem;
+    font-weight: 200;
+}
+.navbar-footer-right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.navbar-footer-right a h1{
+    font-size: 2rem;
+    margin: 0 ;
+    margin-right: 1rem;
+}
+.navbar-footer-right a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    margin: 0 1rem;
+}
+.navbar-footer-right a h1 span{
+    bottom: -5px;
+}
+.navbar-footer-right a i{
+    font-size: 1.9rem;
+    display: inline;
+    transform: rotate(-45deg);
+    transition: all .3s ease;
+}
+.navbar-footer-right a:hover i{
+    transform: rotate(0);
+}
+
+@media screen and (max-width: 900px) {
+    .navbar-box{
+        display: none;
+    }
+    .navbar-main ul{
+        width: 90%;
+    }
+    .btn-nav {
+        font-size: 3rem;
+        height: 4rem;
+    }
+    nav {
+        padding: 6.5vw 3vw;
+    }
+    #hero.active .navbar {
+        top: 0;
+        height: 90vh;
+    }
+    .navbar-footer{
+        flex-direction: column;
+    }
+    .navbar-footer h1{
+        margin-bottom: 2rem;
+    }
+}
+@media screen and (max-width: 700px) {
+    
+}
+@media screen and (max-width: 500px) {
+    nav h1 {
+        font-size: 2rem;
+    }
+    .close-btn {
+        font-size: 2.2rem;
+    }
+    .navbar-footer-right {
+        flex-direction: column;
+        gap:   1rem;
+    }
+    .navbar-footer-right a{
+        display: flex;
+        width: 90%;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
