Added page2 with GSAP

--- a/style.css
+++ b/style.css
@@ -348,6 +348,50 @@ nav h1{
 .navbar-footer-right a:hover i{
     transform: rotate(0);
 }
+/* Page 2 */
+#page2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10rem 0;
+}
+.page2-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 90%;
+}
+.page2-header-main{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.page2-header-main h1{
+    font-size: 3rem;
+    font-weight: 200;
+}
+.page2-hr{
+    width: 10%;
+    margin-top: 2rem;
+}
+.page2-main{
+    width: 90%;
+    margin-top: 2rem;
+}
+.page2-main p{
+    font-size: 4.2vw;
+    line-height: 4.5vw;
+    display: inline-block;
+}
+.page2-main div{
+    overflow: hidden;
+}
+.page2-main span{
+    display: inline-block;
+}
 
 @media screen and (max-width: 900px) {
     .navbar-box{
@@ -373,9 +417,15 @@ nav h1{
     .navbar-footer h1{
         margin-bottom: 2rem;
     }
+    .page2-main p {
+        font-size: 5.2vw;
+        line-height: 5.5vw;
+    }
 }
-@media screen and (max-width: 700px) {
-    
+@media screen and (max-width: 750px) {
+    .page2-header-main h1 {
+        font-size: 2rem;
+    }
 }
 @media screen and (max-width: 500px) {
     nav h1 {
@@ -393,6 +443,10 @@ nav h1{
         width: 90%;
         align-items: center;
         justify-content: center;
+    }
+    .page2-main p {
+        font-size: 7vw;
+        line-height: 9vw;
     }
 
 }
