added page 4 and page 5 with GASP

--- a/style.css
+++ b/style.css
@@ -601,6 +601,89 @@ nav h1 {
     opacity: 1 !important;
     margin-bottom: 10rem;
 }
+/* Page 4 */
+#page4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 4rem 0;
+    user-select: none;
+    overflow: hidden;
+}
+.page4-header{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 90%;
+    margin-bottom: 3rem;
+}
+.page4-hr{
+    width: 100%;
+    margin-top: 1.5rem;
+}
+.page4-header h1{
+    font-size: 3rem;
+    font-weight: 200;
+}
+.page4-main {
+    width: 90%;
+}
+.page4-main p {
+    font-size: 4.2vw;
+    line-height: 4.5vw;
+    display: inline-block;
+}
+/* Page 5 */
+#page5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 100vh;
+}
+#page5 video{
+    height: 100%;
+    position: absolute;
+}
+#page5 svg{
+    position: absolute;
+    height: 60%;
+}
+.page5-box{
+    display: flex;
+    height: 8rem;
+    overflow: hidden;
+}
+.page5-span{
+    font-size: 8rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+.page5-content{
+    position: absolute;
+    text-align: center;
+}
+.page5-content h2{
+    font-size: 3rem;
+    color: #fff;
+    font-weight: 200;
+}
+.page5-content-inner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.page5-content-inner h1{
+    font-size: 6rem;
+    font-weight: 200;
+    margin-left: 1rem;
+    color: #fff;
+}
 @media screen and (max-width: 900px) {
     .navbar-box {
         display: none;
@@ -632,7 +715,7 @@ nav h1 {
         margin-bottom: 2rem;
     }
 
-    .page2-main p {
+    .page2-main p ,.page4-main p{
         font-size: 5.2vw;
         line-height: 5.5vw;
     }
@@ -669,6 +752,23 @@ nav h1 {
         margin: 0 2rem;
         font-weight: 300;
     }
+    .page4-header h1 {
+        font-size: 2.5rem;
+    }
+    #page5 svg {
+        height: auto;
+        width: 60%;
+    }
+    #page5 video {
+        height: auto;
+        width: 100%;
+    }
+    .page5-content-inner h1 {
+        font-size: 3rem;
+    }
+    .page5-content h2 {
+        font-size: 2rem;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -692,7 +792,7 @@ nav h1 {
         justify-content: center;
     }
 
-    .page2-main p {
+    .page2-main p ,.page4-main p{
         font-size: 7vw;
         line-height: 9vw;
     }
@@ -703,6 +803,9 @@ nav h1 {
     .page3-grid-box{
         width: 90%;
         height: 60vh;
+    }
+    .page4-header h1 {
+        font-size: 2rem;
     }
 
 }
