--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p {
 #sample {
     width: 100%;
     height: 100vh;
+    background-color: #000;
     display: grid;
     place-items: center;
 }
@@ -784,6 +785,64 @@ nav h1 {
     margin-left: auto;
     margin-right: auto;
 }
+/* Page 8 */
+#page8{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+    /* background-color: #fff; */
+    position: relative;
+}
+.page8-main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+.page8-main h2{
+    font-size: 2.5rem;
+    font-weight: 200;
+    z-index: 2;
+}
+.page8-main h1{
+    font-size: 7vw;
+    font-weight: 200;
+    height: 9vw;
+    overflow: hidden;
+    margin-top: 2rem;
+    z-index: 2;
+    color: #000;
+}
+.page8-main h1 div{
+    transition: all .3s ease;
+    position: relative;
+}
+.page8-main h1:hover div:first-child{
+    transform: translateY(-100%);
+}
+.page8-main h1:hover div:nth-child(2){
+    transform: translateY(-100%);
+}
+.page8-cursor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #c1c1c136;
+    color: #fff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50% , -50%);
+    pointer-events: none ;
+    top: 0;
+    mix-blend-mode: difference;
+    left: 0;
+}
+
 
 @media screen and (max-width: 900px) {
     .navbar-box {
@@ -845,6 +904,10 @@ nav h1 {
     .swiper {
         margin-top: -35px;
     }
+    .page8-main h1 {
+        font-size: 12vw;
+        height: 15vw;
+    }
 }
 
 @media screen and (max-width: 750px) {
@@ -894,6 +957,9 @@ nav h1 {
         font-size: 11vw;
     }
     .hero-cursor{
+        display: none;
+    }
+    .page8-cursor{
         display: none;
     }
 }
@@ -947,6 +1013,13 @@ nav h1 {
     }
     .page7-header-main h2 {
         font-size: 16vw;
+    }
+    .page8-main h2 {
+        font-size: 2rem;
+    }
+    .page8-main h1 {
+        font-size: 16vw;
+        height: 20vw;
     }
 
 }
